# otel-arrow

./: .clomonitor.yml  .dockerignore  .gitignore  .gitmodules  .golangci.yaml  .markdownlint-cli2.yaml  .markdownlint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  F5 Contributor License Agreement.docx  ISSUE_TRIAGE.md  Makefile  NOTICE  OTAP_FORMAL_SPEC.md  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  codecov.yaml  gh_cookies.txt  go.mod  go.sum  go.work  go.work.save  go.work.sum  issue.md  licenserc.toml  nextest.toml  patch.sed  remove_tests.py  versions.yaml
rust/beaubourg/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  deny.toml  rustfmt.toml
rust/beaubourg/.config/: config.toml
rust/beaubourg/.githooks/: pre-commit
rust/beaubourg/docs/: dataflow-design.md
rust/beaubourg/examples/: multithread_config.yaml  multithread_engine_example.rs  thread_per_core_config.yaml  thread_per_core_engine_example.rs
rust/beaubourg/src/: lib.rs
rust/beaubourg/tests/: config.yaml  multithread_integration_test.rs  thread_per_core_integration_test.rs
rust/experimental/gigwarm_exporter/: ARCHITECTURE.md  Cargo.toml  README.md  SCAFFOLD_IMPROVEMENTS.md
rust/experimental/query_abstraction/: Cargo.toml  README.md  deny.toml
rust/experimental/query_engine/: Cargo.toml  README.md  deny.toml
rust/otap-dataflow/: .clippy.toml  .dockerignore  .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.windows  PREFIX_EXAMPLE.md  PROFILING.md  README.md  ROADMAP.md  checks.json  checks.txt  components-baseline.json  cross-arch-build.sh  deny.toml  dhat-heap.json  dhat-heap_back.json  e2e-latency-probe-poc.yaml  fix_basic.py  glibc.Dockerfile  memory-limiter-proposal-assessment.md  pr_checks.json  rustfmt.toml
rust/otap-dataflow/.cargo/: config.toml
rust/otap-dataflow/.chloggen/: 3003-otap-query-engine-logical-expr-correctness-fixes.yaml  3068.yaml  README.md  TEMPLATE.yaml  admin-api-security-headers.yaml  admin-redact-config-header-secrets.yaml  admin-ui-full-width-toggle.yaml  agent-fed-vendor-bundle-capability.yaml  ame-user-agent.yaml  arc-servers.yaml  arrow-encoder-durable-buffer-metrics.yaml  azure-arc-support.yaml  azure-identity-auth-extension.yaml  azure-monitor-exporter-auth-docs.yaml  azure-monitor-exporter-auth-error-fix.yaml  azure-monitor-exporter-bearer-token-auth.yaml  azure-monitor-exporter-dimensioned-metrics.yaml  azure-monitor-exporter-workload-identity.yaml  azure-monitor-exportr-auth-error-fix.yaml  azure-monitor-in-flight-log-records.yaml  azure-monitor-schema-passthrough.yaml  azure-monitor-time-generated-injection.yaml  batch-processor-metrics.yaml  bearer-token-authorizer-capability.yaml  bearer-token-provider-capability.yaml  broadcast-ack-all-engine-wiring.yaml  broadcast-ack-all-primitives.yaml  capability-scoped-exports.yaml  changelog-process.yaml  clickhouse-exporter.yaml  component-inventory-macro.yaml  component-inventory-phase2.yaml  component-shutdown-event.yaml  condense-attributes-preserve-values.yaml  config.yaml  controller-extension-hooks.yaml  controller-extension-panic-failfast.yaml  controller-reconciliation-primitives.yaml  controller-runtime-core-recovery.yaml  ctl-configurable-branding.yaml  (+114 more)
rust/otap-dataflow/.config/: nextest.toml
rust/otap-dataflow/benchmarks/: Cargo.toml  README.md
rust/otap-dataflow/configs/: README.md  etw-console-otlp.yaml  etw-console.yaml  etw-multi-session.yaml  fake-batch-console.yaml  fake-batch-debug-noop.yaml  fake-batch-perf-issue-1310.yaml  fake-chain-debug-noop.yaml  fake-classic-and-chain-noop.yaml  fake-clickhouse.yaml  fake-debug-noop-internal-telemetry.yaml  fake-debug-noop-multi-receiver.yaml  fake-debug-noop-prometheus-telemetry.yaml  fake-debug-noop-promethueus-telemetry.yaml  fake-debug-noop-telemetry.yaml  fake-debug-noop.yaml  fake-debug-out-port.yaml  fake-durable-buffer-noop.yaml  fake-filter-debug-noop.yaml  fake-flow-measurements-demo.yaml  fake-flow-metrics-demo.yaml  fake-kql-debug-noop.yaml  fake-metric-filter-debug-noop.yaml  fake-multi-tenant-perf.yaml  fake-otap.yaml  fake-otlp-receiver-debug-noop.yaml  fake-otlp.yaml  fake-parquet-azure.yaml  fake-parquet-local-s3.yaml  fake-parquet-s3.yaml  fake-parquet.yaml  fake-perf.yaml  fake-persistence-noop.yaml  fake-queryengine-debug-noop.yaml  fake-sample-debug.yaml  fake-stopwatch-demo.yaml  fake-store-and-forward-noop.yaml  fake-transform-debug-noop.yaml  fake-with-extension.yaml  flow-purpose-demo.yaml  (+57 more)
rust/otap-dataflow/crates/: README.md
rust/otap-dataflow/docs/: admin-ui-architecture.md  agent-multitenancy-design.md  architecture.md  async-best-practices.md  azure-identity-auth-extension.md  component-inventory.md  configuration-model.md  configuration.md  custom-tracing-subscriber-plan.md  design-principles.md  entry-frame-stamping-refactor.md  exclusive-router-guarantees.md  extension-requirements.md  extension-system-architecture.md  extensions.md  fixed-proto-buffer-design.md  glossary.md  host-metrics-receiver.md  internal-logs-design.md  internal-metrics-sdk.md  internal-telemetry-receiver-design.md  journald-receiver.md  k8s-attributes-processor.md  load-balancing.md  memory-limiter-phase1.md  memory-limiter-phase2.md  model_requirements.md  multitenancy-design.md  multitenancy-overview.md  node-stability.md  numa-aware-exec-engine.md  oauth2-client-auth-extension.md  observe-only-retained-work-accounting.md  observe-only-retained-work-budgeting.md  opamp.md  oracle-based-reimplementation.md  otlp-bytes-formatting-layer.md  otlp-event-dispatch-options.md  otlp-receiver.md  performance-experiments.md  (+17 more)
rust/otap-dataflow/examples/: custom_collector.rs  engine.rs  mini_collector.rs
rust/otap-dataflow/rfcs/: 0000-template.md  README.md  (+4 more)
rust/otel-arrow-rust/: .clippy.toml  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  deny.toml  lcov.info  licenserc.toml  rust-toolchain.toml
rust/validation_test/: Cargo.toml  README.md  pipeline_validation_configs.yaml  validate_pipelines.yaml
(+6795 files in other folders)
