[workspace]
members = [
	"crates/*",
]


[package]
name = "beaubourg"
version = "0.3.0"
description = "Lightweight Rust library for building generic pipelines consisting of a collection of receivers, processors, and exporters."
authors = ["Laurent Querel <l.querel@f5.com>"]
edition = "2021"
license = "Apache-2.0"
exclude = [
	"/.github",
	"/.githooks",
	"/.config",
]


[dependencies]
receiver = { path = "crates/receiver" }
exporter = { path = "crates/exporter" }
processor = { path = "crates/processor" }
task = { path = "crates/task" }
config = { path = "crates/config" }
engine = { path = "crates/engine" }
signal = { path = "crates/signal" }
context = { path = "crates/context" }
tracing = "0.1.41"


[dev-dependencies]
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "io-util"] }
futures = "0.3.31"
async-trait = "0.1.87"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.0"
color-eyre = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
mimalloc-rust = "0.2.0"
socket2 = { version="0.5.8", features = ["all"]}
tokio-stream = { version = "0.1.17", features = ["net"] }
once_cell = "1.19.0"
num_cpus = "1.16.0"

[[example]]
name = "multithread_engine_example"
path = "examples/multithread_engine_example.rs"

[[example]]
name = "thread_per_core_engine_example"
path = "examples/thread_per_core_engine_example.rs"

[profile.release]
debug = 1
incremental = true	# disable incremental when sscache is involved via CARGO_INCREMENTAL=0
lto = "thin"

#lto = "fat"
#codegen-units = 1
#opt-level = 3
#debug = false
# debug = true

# To compile with the production profile `cargo --profile production ...`
#[profile.production]
#inherits = "release"
#lto = true
