[package]
name = "validation_test"
version = "0.1.0"
edition = "2024"
description = "Performs validation for encoding/decoding and pipelines with OTLP requests"


[dependencies]
tonic = { version = "0.14", default-features = false, features = [
    "channel",
    "codegen",
    "deflate",
    "gzip",
    "router",
    "server",
    "transport",
    "zstd",
] }
tonic-middleware = "0.4.0"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.48.0", features = [ "sync"] }


weaver_common = { git = "https://github.com/open-telemetry/weaver.git", tag = "v0.17.0"}
weaver_forge = { git = "https://github.com/open-telemetry/weaver.git", tag = "v0.17.0" }
weaver_resolved_schema = { git = "https://github.com/open-telemetry/weaver.git", tag = "v0.17.0"}
weaver_resolver = { git = "https://github.com/open-telemetry/weaver.git", tag = "v0.17.0"}
weaver_semconv = { git = "https://github.com/open-telemetry/weaver.git", tag = "v0.17.0"}


otap-df-engine = { path = "../otap-dataflow/crates/engine" }
otap-df-engine-macros = { path = "../otap-dataflow/crates/engine-macros" }
otap-df-channel = { path = "../otap-dataflow/crates/channel" }
otap-df-config = { path = "../otap-dataflow/crates/config" }
otap-df-pdata = { path = "../otap-dataflow/crates/pdata" }
otap-df-query-engine = { path = "../otap-dataflow/crates/query-engine" }
otap-df-telemetry = { path = "../otap-dataflow/crates/telemetry" }
otap-df-telemetry-macros = { path = "../otap-dataflow/crates/telemetry-macros" }
otap-df-state = { path = "../otap-dataflow/crates/state" }
otap-df-otap = { path = "../otap-dataflow/crates/otap" }


