[package]
name = "gigwarm-exporter"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Experimental Geneva exporter scaffold (no-op placeholder)"
repository = "https://github.com/open-telemetry/otel-arrow"
publish = false
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
logs = []
traces = []
metrics = []

[dependencies]
# Intentionally empty - dependencies will be added incrementally as functionality is implemented

[dev-dependencies]
# Test dependencies will be added as needed

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
