[workspace]
members = [
    "expressions",
    "parser-abstractions",
    "kql-parser",
    "ottl-parser",
    "engine-columnar",
    "engine-recordset2",
    "engine-recordset-otlp-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["OpenTelemetry"]
edition = "2024"
repository = "https://github.com/open-telemetry/otel-arrow"
license = "Apache-2.0"
publish = false
rust-version = "1.86.0"

[workspace.dependencies]
chrono = "0.4.40"
regex = "1.11.1"
thiserror = "2.0.12"