[package]
name = "benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
mimalloc-rust.workspace = true
otap-df-otap = { path = "../crates/otap" }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

otap-df-config = { path = "../crates/config" }
otap-df-channel = { path = "../crates/channel" }
otap-df-engine = { path = "../crates/engine"}
otap-df-telemetry = { path="../crates/telemetry"}
otap-df-pdata = { path="../crates/pdata", features = ["bench"]}
otel-arrow-rust = { path = "../../otel-arrow-rust"}

fluke-hpack.workspace = true
futures-channel.workspace = true
futures.workspace = true
flume.workspace = true
core_affinity.workspace = true
local-sync.workspace = true
async-unsync.workspace = true
unsync.workspace = true
portpicker.workspace = true
tokio-stream.workspace = true

[lints]
workspace = true

[[bench]]
name = "config"
harness = false

[[bench]]
name = "channel"
harness = false

[[bench]]
name = "exporter"
harness = false

[[bench]]
name = "otap_encoder"
harness = false

[[bench]]
name = "pdata_views"
harness = false

[[bench]]
name = "syslog_cef_receiver"
harness = false

[profile.bench]
opt-level = 3
debug = false
incremental = false
lto = "fat"
codegen-units = 1
panic = "abort"

